--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,11 @@ img {
   width: 100%;
 }
 
+h3 {
+  font-size: 26px;
+  font-weight: 300;
+}
+
 h4 {
   color: #00ed82;
   font-size: 13px;
@@ -57,10 +62,40 @@ h4 {
   opacity: 0.8;
 }
 
+.btn-outline {
+  background: none;
+  color: #fff;
+  border: 2px solid #fff;
+}
+
+.btn-outline:hover {
+  color: #fff;
+  border-color: #ccc;
+}
+
 .legal-text {
   font-size: 10px;
   color: gray;
   margin-top: 20px;
+}
+
+.sub-link {
+  display: block;
+  color: gray;
+  font-size: 12px;
+  margin-top: 5px;
+  text-decoration: underline;
+}
+
+.text-xl {
+  font-size: 70px;
+  font-weight: bold;
+}
+
+.sub-text {
+  max-width: 850px;
+  margin-bottom: 10px;
+  font-size: 24px;
 }
 
 /* Header */
@@ -73,6 +108,8 @@ h4 {
   display: flex;
   justify-content: flex-end;
   padding: 20px 40px;
+  z-index: 2;
+  position: relative;
 }
 
 .header nav .login-btn {
@@ -108,7 +145,115 @@ h4 {
   margin: 25px 0;
 }
 
+.header::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100px;
+  height: 180px;
+  z-index: 1;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.76) 15.54%,
+    rgba(0, 0, 0, 0.192) 60.23%,
+    rgba(0, 0, 0, 8e-5) 100%
+  );
+}
+
+/*Sub Header*/
+.sub-header {
+  display: grid;
+  grid-template-columns: 2fr 4fr 2fr;
+  gap: 40px;
+  align-items: center;
+  padding: 30px 40px;
+  background: linear-gradient(
+    318.68deg,
+    #0f495c 0%,
+    #0d3640 49.72%,
+    #08141f 100%
+  );
+}
+
+.sub-header > div:last-of-type {
+  justify-self: end;
+  align-self: end;
+}
+
+.sub-header > div:last-of-type .sub-link {
+  text-align: center;
+}
+
+/*Categories*/
+
+.categories {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-content: center;
+  text-align: center;
+  padding: 90px 40px;
+}
+
+.categories .covers {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  margin-top: 40px;
+}
+
+.categories .covers > div {
+  height: 500px;
+  width: 300px;
+  position: relative;
+}
+
+.categories .cover-grad {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+      156.82deg,
+      rgba(0, 0, 0, 0.6) 4.58%,
+      rgba(0, 0, 0, 0) 69.61%
+    ),
+    linear-gradient(24.5deg, rgba(0, 0, 0, 0.2) 4.71%, rgba(0, 0, 0, 0) 71.49%);
+}
+
+.categories .cover-text {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  text-align: left;
+}
+
+.categories .cover-1 {
+  background: url("../img/cover-1.jpg") no-repeat center center / cover;
+}
+
+.categories .cover-2 {
+  background: url("../img/cover-2.jpg") no-repeat center center / cover;
+}
+
+.categories .cover-3 {
+  background: url("../img/cover-3.jpg") no-repeat center center / cover;
+}
+
+.categories .cover-4 {
+  background: url("../img/cover-4.jpg") no-repeat center center / cover;
+}
+
 /*Media queries*/
+
+@media (max-width: 1100px) {
+  .categories .covers {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
 @media (max-width: 768px) {
   .header .logo {
     width: 200px;
@@ -117,5 +262,40 @@ h4 {
   .header .header-content {
     text-align: center;
     padding: 0 20px;
+  }
+
+  .header .header-text-1 {
+    margin-bottom: 40px;
+  }
+  .header .header-text-2 {
+    display: none;
+  }
+  .sub-header {
+    grid-template-columns: 1fr;
+    text-align: center;
+    gap: 20px;
+  }
+
+  .sub-header img {
+    width: 250px;
+    margin: auto;
+  }
+
+  .sub-header > div:last-of-type {
+    justify-self: center;
+    align-self: center;
+  }
+
+  .text-xl {
+    line-height: 1.3;
+    font-size: 40px;
+  }
+
+  .sub-text {
+    font-size: 20px;
+  }
+
+  .categories .covers {
+    grid-template-columns: 1fr;
   }
 }
