--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -9,19 +9,19 @@
 html,
 body {
   font-family: "Rubik", sans-serif;
-  background: black;
-  color: white;
+  background: #000;
+  color: #fff;
   line-height: 1.7;
   overflow-x: hidden;
 }
 
 a {
-  color: white;
+  color: #fff;
   text-decoration: none;
 }
 
 a:hover {
-  color: gray;
+  color: #ccc;
 }
 
 ul {
@@ -42,9 +42,10 @@ h4 {
   font-size: 13px;
   text-transform: uppercase;
 }
+
 .btn {
   display: inline-block;
-  background: white;
+  background: #fff;
   color: #333;
   min-width: 135px;
   padding: 20px 32px;
@@ -58,7 +59,7 @@ h4 {
   text-transform: uppercase;
 }
 
-.btn-ct:hover {
+.btn-cta:hover {
   opacity: 0.8;
 }
 
@@ -80,13 +81,13 @@ h4 {
 
 .legal-text {
   font-size: 10px;
-  color: gray;
+  color: #ccc;
   margin-top: 20px;
 }
 
 .sub-link {
   display: block;
-  color: gray;
+  color: #ccc;
   font-size: 12px;
   margin-top: 5px;
   text-decoration: underline;
@@ -121,7 +122,7 @@ h4 {
   cursor: pointer;
   background: none;
   border: none;
-  color: white;
+  color: #fff;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -155,7 +156,7 @@ h4 {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100px;
+  width: 100%;
   height: 180px;
   z-index: 1;
   background: linear-gradient(
@@ -166,7 +167,7 @@ h4 {
   );
 }
 
-/*Sub Header*/
+/* Sub Header */
 .sub-header {
   display: grid;
   grid-template-columns: 2fr 4fr 2fr;
@@ -190,12 +191,11 @@ h4 {
   text-align: center;
 }
 
-/*Categories*/
-
+/* Categories */
 .categories {
   display: flex;
   flex-direction: column;
-  align-self: center;
+  align-items: center;
   justify-content: center;
   text-align: center;
   padding: 90px 40px;
@@ -238,19 +238,17 @@ h4 {
 .categories .cover-1 {
   background: url("../img/cover-1.jpg") no-repeat center center / cover;
 }
-
 .categories .cover-2 {
   background: url("../img/cover-2.jpg") no-repeat center center / cover;
 }
-
 .categories .cover-3 {
   background: url("../img/cover-3.jpg") no-repeat center center / cover;
 }
-
 .categories .cover-4 {
   background: url("../img/cover-4.jpg") no-repeat center center / cover;
 }
 
+/* Live */
 .live {
   background: #151516;
   padding: 40px;
@@ -274,8 +272,7 @@ h4 {
   text-decoration: underline;
 }
 
-/*Live sports*/
-
+/* Live Sports */
 .live-sports {
   background: url("../img/live-sports.jpg") no-repeat center center / cover;
   height: 800px;
@@ -299,15 +296,18 @@ h4 {
 
 .live-sports-logos > div {
   background: url("../img/network-logo-bg.png") no-repeat center center / cover;
-  height: 40px;
-  width: 40px;
+  height: 60px;
+  width: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-/*Footer*/
+.live-sports-logos img {
+  width: 40px;
+}
 
+/* Footer */
 .footer {
   background: #ebedf2;
   color: #333;
@@ -347,8 +347,7 @@ h4 {
   margin-right: 25px;
 }
 
-/*Modal*/
-
+/* Modal */
 .modal {
   display: none;
   position: fixed;
@@ -356,16 +355,27 @@ h4 {
   left: 0;
   z-index: 1;
   height: 100%;
-  width: 100px;
+  width: 100%;
   background: rgba(0, 0, 0, 0.5);
 }
 
 .modal-box {
   margin: 10% auto;
   width: 400px;
-  background: white;
+  background: #fff;
   color: #333;
   position: relative;
+  animation: modalopen 1s;
+}
+
+@keyframes modalopen {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 .modal-body {
@@ -387,10 +397,10 @@ h4 {
   width: 23px;
   position: absolute;
   top: 20px;
-  right: 2opx;
+  right: 20px;
 }
 
-.modal .footer {
+.modal .modal-footer {
   background: #f7f7f9;
   color: #333;
   padding: 20px 0;
@@ -402,8 +412,7 @@ h4 {
   color: steelblue;
 }
 
-/*form control*/
-
+/* Form */
 .form-control {
   margin: 20px 0;
 }
@@ -412,16 +421,16 @@ h4 {
   display: block;
   text-transform: uppercase;
 }
+
 .form-control input {
   width: 100%;
   border: 2px #ccc solid;
   border-radius: 5px;
   height: 50px;
-  width: 50px;
+  padding: 5px;
 }
 
-/*Media queries*/
-
+/* Media Queries */
 @media (max-width: 1100px) {
   .categories .covers {
     grid-template-columns: 1fr 1fr;
@@ -441,9 +450,11 @@ h4 {
   .header .header-text-1 {
     margin-bottom: 40px;
   }
+
   .header .header-text-2 {
     display: none;
   }
+
   .sub-header {
     grid-template-columns: 1fr;
     text-align: center;
